/*
Copyright 2021 The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package api_bpfrecorder;
option go_package = "/api_bpfrecorder";

service BpfRecorder {
  rpc Start(EmptyRequest) returns (EmptyResponse) {}
  rpc Stop(EmptyRequest) returns (EmptyResponse) {}
  rpc SyscallsForProfile(ProfileRequest) returns (SyscallsResponse) {}
  rpc ApparmorForProfile(ProfileRequest) returns (ApparmorResponse) {}
}

message EmptyRequest {}
message EmptyResponse {}

message ProfileRequest { string name = 1; }

message SyscallsResponse {
  repeated string syscalls = 1;
  string go_arch = 2;
}

message ApparmorResponse {
  message Files {
    repeated string allowed_executables = 1;
    repeated string allowed_libraries = 2;
    repeated string readonly_paths = 3;
    repeated string writeonly_paths = 4;
    repeated string readwrite_paths = 5;
  }
  Files files = 1;

  message Socket {
    bool use_raw = 1;
    bool use_tcp = 2;
    bool use_udp = 3;
  }
  Socket socket = 2;

  repeated string capabilities = 3;
}
